# OneShot

./: .gitignore  CHANGELOG.rst  QUICKSTART_GROQ.txt  README.md  codex-logs.txt  docker_fast.txt  eval.toml  gh_issue.txt  gh_origin_request.example.toml  issues.txt  main.py  oneshot_eval.txt  pyproject.toml  pytest.ini  re_bench.txt  run_example_with_groq.sh  run_quick_example.sh  setup_env.sh  test_api_key.sh
configs/: env_bench.toml  hello_world.toml  notes.txt
docs/: README.md
examples/: harbor_job.yaml
guides/: creating-a-task.md  docker-sequential.md  huggingface.md  huggingface_run.md  huggingface_upload.md  modal-parallel.md  modal.md  setup.md
research_bench/: README.md  pair_programming.txt  refactor_targets.txt
scripts/: Makefile  __init__.py  benchmark_codex_build.py  codex_modal_runner.py  collect_codex_results.py  common.sh  container_start_proxy.sh  container_trace_health_check.sh  debug_baseline_api.py  eval_in_docker.sh  eval_rollouts.py  eval_run.sh  export_container_traces.sh  export_hf.py  fetch_modal_artifacts.py  get_score.py  install_codex_synth.sh  modal_runner.py  oneshot_to_harbor.py  parallel_modal_runner.py  prepare_task_for_modal.sh  prepare_task_for_modal_v2.sh  re_bench_compare.py  regenerate_bootstrap.py  run_codex_box.sh  run_codex_synth_ai.sh  run_hf_task_docker.py  run_opencode_box.sh  run_pair_programming.py  run_parallel_tasks.sh  run_parallel_tasks_simple.sh  run_re_bench.py  run_sandbox.sh  run_sequential_tasks.sh  run_synth_demo.py  setup_codex_volume.sh  start_synth_workers.sh  synth_models.sh  test_codex_reasoning.py  (+3 more)
(+122 files in other folders)
