[project]
name = "oneshot-synth"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hf>=0.0.8",
    "huggingface-hub>=0.34.4",
    "modal>=1.1.1",
    "openai>=1.101.0",
    "mitmproxy>=10.3.0",
    "synth-ai>=0.2.19",
    "click>=8.1.8",
    "requests>=2.32.4",
]

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
  "src/one_shot",
  "src/local_tracing",
  "src/synth_bench",
]

[tool.hatch.build.targets.sdist]
include = [
  "src",
  "README.md",
  "LICENSE",
]

[project.scripts]
one-shot = "one_shot.cli:main"
